// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProcessingProgress component > matches snapshot in error state 1`] = `
<div>
  <div
    class="border-t border-gray-100 p-8"
  >
    <div
      class="space-y-6"
    >
      <div
        class="space-y-3"
      >
        <div
          class="flex items-center justify-between"
        >
          <span
            class="text-sm font-medium text-gray-700"
          >
            Erro
          </span>
          <span
            class="text-sm text-gray-500"
          >
            0
            %
          </span>
        </div>
        <div
          aria-label="Progresso de tradução"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="w-full bg-gray-200 rounded-full h-2"
          role="progressbar"
        >
          <div
            class="h-2 rounded-full transition-all duration-500 bg-red-500"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-4"
      >
        <button
          class="flex-1 bg-red-600 hover:bg-red-700 text-white px-6 py-3 rounded-lg font-medium transition-colors flex items-center justify-center gap-2"
        >
          <svg
            class="lucide lucide-alert-circle w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          Tentar Novamente
        </button>
      </div>
      <div
        class="bg-red-50 border border-red-200 rounded-lg p-4"
      >
        <div
          class="flex items-start gap-3"
        >
          <svg
            class="lucide lucide-alert-circle w-5 h-5 text-red-500 mt-0.5 flex-shrink-0"
            data-testid="alert-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          <p
            class="text-red-700 text-sm"
          >
            Algo deu errado
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProcessingProgress component > matches snapshot in idle state 1`] = `
<div>
  <div
    class="border-t border-gray-100 p-8"
  >
    <div
      class="space-y-6"
    >
      <div
        class="flex items-center gap-4"
      >
        <button
          class="flex-1 px-6 py-3 rounded-lg font-medium transition-colors flex items-center justify-center gap-2 bg-blue-600 hover:bg-blue-700 text-white"
        >
          <svg
            class="lucide lucide-file-text w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          Traduzir com DeepL
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProcessingProgress component > matches snapshot in processing state 1`] = `
<div>
  <div
    class="border-t border-gray-100 p-8"
  >
    <div
      class="space-y-6"
    >
      <div
        class="space-y-3"
      >
        <div
          class="flex items-center justify-between"
        >
          <span
            class="text-sm font-medium text-gray-700"
          >
            Carregando
          </span>
          <span
            class="text-sm text-gray-500"
          >
            50
            %
          </span>
        </div>
        <div
          aria-label="Progresso de tradução"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="w-full bg-gray-200 rounded-full h-2"
          role="progressbar"
        >
          <div
            class="h-2 rounded-full transition-all duration-500 bg-blue-500"
            style="width: 50%;"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-4"
      >
        <button
          class="flex-1 bg-blue-400 text-white px-6 py-3 rounded-lg font-medium flex items-center justify-center gap-2"
          disabled=""
        >
          <svg
            class="lucide lucide-loader2 w-5 h-5 animate-spin"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12a9 9 0 1 1-6.219-8.56"
            />
          </svg>
          Processando...
        </button>
      </div>
    </div>
  </div>
</div>
`;
